--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	    <nav class="mdl-navigation">
 	      <a class="mdl-navigation__link" href="comprendre.html"><i class="material-icons">description</i>Comprendre</a>
 	      <a class="mdl-navigation__link" href="se_proteger.html"><i class="material-icons">warning</i>Se protéger</a>
-	      <a class="mdl-navigation__link" href="diagnostiquer.html">Diagnostiquer</a>	      
+	      <a class="mdl-navigation__link" href="diagnostiquer.html"><i class="material-icons">find_in_page</i>Diagnostiquer</a>	      
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">healing</i>Se soigner</a>
 	      <a class="mdl-navigation__link" href="question_reponses.html"><i class="material-icons">forum</i>Questions / Réponses</a>
 	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Jouer : Le quiz</a>
@@ -136,7 +136,7 @@
 					  </div>
 					</div>		  	
 			  </div>
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet mdl-cell--hide-phone mdl-cell--hide-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comment">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
@@ -144,7 +144,7 @@
 					  </div>
 					</div>		  	
 			  </div>
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet mdl-cell--hide-phone mdl-cell--hide-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp qui">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
