--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	      <a class="mdl-navigation__link" href="comprendre.html"><i class="material-icons">description</i>Comprendre</a>
 	      <a class="mdl-navigation__link" href="se_proteger.html"><i class="material-icons">warning</i>Se protéger</a>
 	      <a class="mdl-navigation__link" href="diagnostiquer.html"><i class="material-icons">find_in_page</i>Diagnostiquer</a>	      
-	      <a class="mdl-navigation__link" href=""><i class="material-icons">healing</i>Se soigner</a>
+	      <a class="mdl-navigation__link" href="se_soigner.html"><i class="material-icons">healing</i>Se soigner</a>
 	      <a class="mdl-navigation__link" href="question_reponses.html"><i class="material-icons">forum</i>Questions / Réponses</a>
 	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Le quiz</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">extension</i>Chasse aux parasites</a>	      			     
