--- a/questions_reponses.html
+++ b/questions_reponses.html
@@ -57,15 +57,17 @@
 	      <a class="mdl-navigation__link" href="se_proteger.html"><i class="material-icons">warning</i>Se protéger</a>
 	      <a class="mdl-navigation__link" href="diagnostiquer.html"><i class="material-icons">find_in_page</i>Diagnostiquer</a>	      
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">healing</i>Se soigner</a>
-	      <a class="mdl-navigation__link" href="question_reponses.html"><i class="material-icons">forum</i>Questions / Réponses</a>
+	      <a class="mdl-navigation__link" href="questions_reponses.html"><i class="material-icons">forum</i>Questions / Réponses</a>
 	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Le quiz</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">extension</i>Chasse aux parasites</a>	      			     
 	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">copyright</i>Comment ?</a>
 	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
 	    </nav>
-	  </div> 
+	  </div> 	  
+
+		
 	    <div class="page-content">	
-			<div class="mdl-grid bg_search">
+			<div class="mdl-grid bg_search mdl-container">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 				<div class="search">
 				    <i class="material-icons">search</i>
@@ -73,17 +75,9 @@
 				</div>
 			  </div>
 			</div>	
-	    </div>		  
-	    <div class="page-content">	
-			<div class="mdl-grid bg_search">
-			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
-				<div class="search">
-				    <i class="material-icons">search</i>
-				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
-				</div>
-			  </div>
-			</div>	
-	    </div>		  
+	    </div>	
+
+
 	  <main class="mdl-layout__content">
 	    <div class="page-content">	
 			
