--- a/se_soigner.html
+++ b/se_soigner.html
@@ -64,6 +64,7 @@
 	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
 	    </nav>
 	  </div> 
+	  <div>	
 	    <div class="page-content">	
 			<div class="mdl-grid bg_search">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
@@ -73,7 +74,8 @@
 				</div>
 			  </div>
 			</div>	
-	    </div>		  
+	    </div>		
+	   </div>   
 	  <main class="mdl-layout__content">
 	    <div class="page-content">	
 			
