--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/custom.css" /> 
 	<link rel="stylesheet" href="css/adresses.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<script defer src="js/material.min.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
