--- a/palu_vous_play.html
+++ b/palu_vous_play.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/custom.css" /> 
 	<link rel="stylesheet" href="css/adresses.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css">	
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<script defer src="js/material.min.js"></script>
 </head>
 <body>
 
