--- a/quiz_play.html
+++ b/quiz_play.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/adresses.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css">	
     <link href="css/quiz_style.css" rel="stylesheet" />	
- 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+ 	<script defer src="js/material.min.js"></script>
     <script type="text/javascript" src="data/quiz_questions.json"></script>
     <script type="text/javascript" src="js/quiz_engine.js"></script>    
 
