--- a/chasse_para_play.html
+++ b/chasse_para_play.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Jouer à chasse aux parasites .:. EduPalu</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="icon.css">
     <link href="css/game_chasse_style.css" rel="stylesheet" />	
 	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
