--- a/qui.html
+++ b/qui.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>A propos .:. EduPalu</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="icon.css">
 	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
 	<link rel="stylesheet" href="css/adresses.css" />
