--- a/comprendre.html
+++ b/comprendre.html
@@ -100,7 +100,8 @@
 			<!-- END search results-->
 			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">C'est quoi le paludisme ?</h4>
-					<img src="img/labo.jpg" alt="Laboratoire de campagne" class="full_img" />
+					<img src="img/labo.jpg" alt="Laboratoire de campagne" class="ful_img" />
+
 					<div class="text_container">
 						<div class="mdl-container_text">	
 
